src/parsing/zparser.mjs
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/


  /* 
    peggy --cache zparser.pegjs
    peggy --cache --format es -o zparser.mjs zparser.peggy
  */
  
  import { type, operation } from "../branch/operations/constants.mjs";
  

  
 
  const opCode = op => {
    switch (op) {
      case '=': return operation.UNIFY;
      case '!=': return operation.NOT_UNIFY;
      case 'in': return operation.IN;
      case 'and': 
      case ',': return operation.AND;
      case 'or': 
      case ';': return operation.OR;
      case 'union': return operation.UNION;
      case 'subset': return operation.SUBSET;
      case '+': return operation.ADD;
      case '-': return operation.SUB;
      case '*': return operation.MUL;
      case '/': return operation.DIV;
      case '%': return operation.MOD;
      case '<': return operation.BELOW;
      case '<=': return operation.BELOW_OR_EQUAL;
      case '>': return operation.ABOVE;
      case '>=': return operation.ABOVE_OR_EQUAL;
    }
  }

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "assume";
  var peg$c1 = "consider";
  var peg$c2 = "@";
  var peg$c3 = ".";
  var peg$c4 = "-";
  var peg$c5 = "+";
  var peg$c6 = "\"";
  var peg$c7 = "=";
  var peg$c8 = "Proposition";
  var peg$c9 = ":";
  var peg$c10 = "Query";
  var peg$c11 = "(";
  var peg$c12 = ")";
  var peg$c13 = "()";
  var peg$c14 = "$";
  var peg$c15 = "'";
  var peg$c16 = "\xAB";
  var peg$c17 = "/*";
  var peg$c18 = "...";
  var peg$c19 = "\xBB";
  var peg$c20 = "is";
  var peg$c21 = "unique";
  var peg$c22 = "[";
  var peg$c23 = ",";
  var peg$c24 = "]";
  var peg$c25 = "as";
  var peg$c26 = "{";
  var peg$c27 = "|";
  var peg$c28 = "}";
  var peg$c29 = "union";
  var peg$c30 = "or";
  var peg$c31 = ";";
  var peg$c32 = "and";
  var peg$c33 = "!=";
  var peg$c34 = ">=";
  var peg$c35 = "<=";
  var peg$c36 = "<";
  var peg$c37 = ">";
  var peg$c38 = "*";
  var peg$c39 = "/";
  var peg$c40 = "%";
  var peg$c41 = "in";
  var peg$c42 = "subset";
  var peg$c43 = "*/";
  var peg$c44 = "#";

  var peg$r0 = /^[a-zA-Z0-9_]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[a-zA-Z0-9.\-]/;
  var peg$r3 = /^[^"]/;
  var peg$r4 = /^[_a-zA-Z0-9]/;
  var peg$r5 = /^[^ {}\n\t()'|]/;
  var peg$r6 = /^[^\xBB]/;
  var peg$r7 = /^[^\n\r]/;
  var peg$r8 = /^[\n\r]/;
  var peg$r9 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("assume", false);
  var peg$e1 = peg$literalExpectation("consider", false);
  var peg$e2 = peg$literalExpectation("@", false);
  var peg$e3 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e4 = peg$literalExpectation(".", false);
  var peg$e5 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e6 = peg$literalExpectation("-", false);
  var peg$e7 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], ".", "-"], false, false);
  var peg$e8 = peg$literalExpectation("+", false);
  var peg$e9 = peg$literalExpectation("\"", false);
  var peg$e10 = peg$classExpectation(["\""], true, false);
  var peg$e11 = peg$literalExpectation("=", false);
  var peg$e12 = peg$literalExpectation("Proposition", false);
  var peg$e13 = peg$literalExpectation(":", false);
  var peg$e14 = peg$literalExpectation("Query", false);
  var peg$e15 = peg$literalExpectation("(", false);
  var peg$e16 = peg$literalExpectation(")", false);
  var peg$e17 = peg$literalExpectation("()", false);
  var peg$e18 = peg$literalExpectation("$", false);
  var peg$e19 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e20 = peg$literalExpectation("'", false);
  var peg$e21 = peg$literalExpectation("\xAB", false);
  var peg$e22 = peg$literalExpectation("/*", false);
  var peg$e23 = peg$literalExpectation("...", false);
  var peg$e24 = peg$classExpectation([" ", "{", "}", "\n", "\t", "(", ")", "'", "|"], true, false);
  var peg$e25 = peg$classExpectation(["\xBB"], true, false);
  var peg$e26 = peg$literalExpectation("\xBB", false);
  var peg$e27 = peg$literalExpectation("is", false);
  var peg$e28 = peg$literalExpectation("unique", false);
  var peg$e29 = peg$literalExpectation("[", false);
  var peg$e30 = peg$literalExpectation(",", false);
  var peg$e31 = peg$literalExpectation("]", false);
  var peg$e32 = peg$literalExpectation("as", false);
  var peg$e33 = peg$literalExpectation("{", false);
  var peg$e34 = peg$literalExpectation("|", false);
  var peg$e35 = peg$literalExpectation("}", false);
  var peg$e36 = peg$literalExpectation("union", false);
  var peg$e37 = peg$literalExpectation("or", false);
  var peg$e38 = peg$literalExpectation(";", false);
  var peg$e39 = peg$literalExpectation("and", false);
  var peg$e40 = peg$literalExpectation("!=", false);
  var peg$e41 = peg$literalExpectation(">=", false);
  var peg$e42 = peg$literalExpectation("<=", false);
  var peg$e43 = peg$literalExpectation("<", false);
  var peg$e44 = peg$literalExpectation(">", false);
  var peg$e45 = peg$literalExpectation("*", false);
  var peg$e46 = peg$literalExpectation("/", false);
  var peg$e47 = peg$literalExpectation("%", false);
  var peg$e48 = peg$literalExpectation("in", false);
  var peg$e49 = peg$literalExpectation("subset", false);
  var peg$e50 = peg$literalExpectation("*/", false);
  var peg$e51 = peg$anyExpectation();
  var peg$e52 = peg$literalExpectation("#", false);
  var peg$e53 = peg$classExpectation(["\n", "\r"], true, false);
  var peg$e54 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e55 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e56 = peg$otherExpectation("whitespace");

  var peg$f0 = function(imports, definitions) {return imports.concat(definitions)};
  var peg$f1 = function(imp) {return imp};
  var peg$f2 = function(packageID) {
    	return {type: type.ASSUME, packageID}
    };
  var peg$f3 = function(filepath) {
    	return {type: type.CONSIDER, filepath}
    };
  var peg$f4 = function(packageName, semVersion) {
  return {packageName, semVersion}
};
  var peg$f5 = function(username, packageName) {
	return {username: username.join(''), packageName: packageName.join('')}
};
  var peg$f6 = function(major, minor, patch, preRelease, build) {
      return { major: major.join(''), minor: minor.join(''), patch: patch.join(''), preRelease, build };
    };
  var peg$f7 = function(identifier) {
      return identifier.join('');
    };
  var peg$f8 = function(identifier) {
      return identifier.join('');
    };
  var peg$f9 = function(chars) {
      return chars.join('');
    };
  var peg$f10 = function(definition) {return definition};
  var peg$f11 = function(definitions) {return definitions};
  var peg$f12 = function(globalVariable) {return globalVariable};
  var peg$f13 = function(variable, set) {
  return {
  	...set,
  	variable
  }
};
  var peg$f14 = function(variable, property, statement, proof) {
    	return {
        	type: type.PROPOSITION,
          variable,
          property: property.data,
          statement: statement.data,
          proof
        }
    };
  var peg$f15 = function(statement, query) {
    	return {
          type: type.QUERY,
          statement: statement.data,
          query
        }
    };
  var peg$f16 = function(terms, domain) {return domain};
  var peg$f17 = function(terms, domain) { return { type: type.TUPLE, data: terms, domain } };
  var peg$f18 = function() { return { type: type.TUPLE, data: [] } };
  var peg$f19 = function(tupleTerm, terms) {return terms};
  var peg$f20 = function(tupleTerm, terms) { return [tupleTerm].concat(terms) };
  var peg$f21 = function(varname) {return { type: type.GLOBAL_VAR, varname: varname.join("") } };
  var peg$f22 = function(varname, variable) {return variable};
  var peg$f23 = function(varname, domain) {
  	return { 
    	type: type.LOCAL_VAR, 
  		varname: varname.length ? varname.join(""):undefined,
      domain
    } 
  };
  var peg$f24 = function(constant) {
    	return {
        	type: type.CONSTANT,
            data: constant.join("")
        }
    };
  var peg$f25 = function(sign, int, float) {return '.' + float.join('')};
  var peg$f26 = function(sign, int, float) {
  const n = (sign || '') + int.join('') + (float || '');
  return {type: type.CONSTANT, data: n }
};
  var peg$f27 = function(constant) {
   return {
      type: type.CONSTANT,
      data: constant.join("")
   }
};
  var peg$f28 = function(element) {return element};
  var peg$f29 = function() {return UNIQUE};
  var peg$f30 = function(variable) {return [variable]};
  var peg$f31 = function(variable) {return variable};
  var peg$f32 = function(variables) {return variables};
  var peg$f33 = function(variables, op) {return {
	type: type.INDEX,
    op,
    variables
}};
  var peg$f34 = function(index, idx) {return idx};
  var peg$f35 = function(index, indexes) {
	return [index].concat(indexes || [])
};
  var peg$f36 = function(variable) {return variable};
  var peg$f37 = function(element, expression) {return expression;};
  var peg$f38 = function(element) {return null};
  var peg$f39 = function(element, expression, variable) {return variable};
  var peg$f40 = function(element, expression, domain, alias, indexes) {
       return {
         type: type.SET,
         elements: [element],
         indexes,
         domain,
         expression,
         size: -1,
         elementAlias: alias
       }
     };
  var peg$f41 = function(elements, variable) {return variable};
  var peg$f42 = function(elements, domain) {
       return {
         type: type.SET,
         elements,
         domain,
         size: -1
       }
     };
  var peg$f43 = function(elements) {
       return {
         type: type.SET,
         elements,
         expression: null,
         size: elements.length
       }
     };
  var peg$f44 = function(set) {return set};
  var peg$f45 = function(a, op, b) {
  	return {
       type: type.SET_EXP,
       a,
       op: opCode(op),
       b
    }
  };
  var peg$f46 = function(set) {return set};
  var peg$f47 = function(variable) {return {type: type.SET_SIZE, variable}};
  var peg$f48 = function(a, op, b) { return { type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f49 = function(a, op, b) { return { type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f50 = function(a, op, b) { return { type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f51 = function(a, op, b) { return { type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f52 = function(a, op, b) { return { type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f53 = function(a, op, b) { return { type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f54 = function(a, op, b) {return {type: type.CONSTRAINT, op: opCode(op), a, b }; };
  var peg$f55 = function(expression) {return expression};
  var peg$f56 = function() {return null};
  var peg$f57 = function() {return null};
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$resultsCache = {};

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2;

    var key = peg$currPos * 45 + 0;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseimports();
    s2 = peg$parsedefinitions();
    peg$savedPos = s0;
    s0 = peg$f0(s1, s2);

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseimports() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 45 + 1;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$parse_();
    s3 = peg$parseimport();
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      peg$savedPos = s1;
      s1 = peg$f1(s3);
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$parse_();
      s3 = peg$parseimport();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        peg$savedPos = s1;
        s1 = peg$f1(s3);
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseimport() {
    var s0, s1, s2, s3;

    var key = peg$currPos * 45 + 2;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsewsp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsepackageID();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsewsp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsequotedString();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f3(s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepackageID() {
    var s0, s1, s2, s3;

    var key = peg$currPos * 45 + 3;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsepackageName();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 64) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesemVersion();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepackageName() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 45 + 4;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
